Add `$now` variable to get the current date

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -125,4 +125,9 @@ format $date =~ ".*-03-19"  ==> tag period:on_a_special_day,
 month $date == 1 ==> tag month:January,
 month $date == 2 ==> tag month:February,
 year $date == 2010 ==> tag year:2010,
+
+-- “$now” evaluates to the current time
+day of month $now == day of month $date ==> tag current-day,
+month $now == month $date ==> tag current-month,
+year $now == year $date ==> tag current-year,
 -}
