Allow let-bindings to bind conditions to variables
- Use StateT to keep track of a map of variables to conditions
- Parser for let bindings
- Adapt rule parser to allow let bindings
- Golden test and unit tests for let bindings
- Some stylistic changes in the code

--- a/tests/categorize.cfg
+++ b/tests/categorize.cfg
@@ -23,3 +23,6 @@ $time >= 22:00 || $time <  2:00 ==> tag time-of-day:late-evening,
 -- This tag always refers to the last 24h
 $sampleage <= 24:00 ==> tag last-day,
 
+let night = $time >=  2:00 && $time <  8:00,
+
+current window $program == "emacs" && $night ==> tag night-coding
