Add let binding to categorize.cfg example

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -13,6 +13,10 @@ aliases (
 	"Pidgin"                  -> "pidgin"
 	)
 
+-- Use let-bindings to reduce duplication
+let isJava = current window $program ==
+  ["sun-awt-X11-XFramePeer", "sun-awt-X11-XDialogPeer", "sun-awt-X11-XWindowPeer"],
+
 -- A rule that probably everybody wants. Being inactive for over a minute
 -- causes this sample to be ignored by default.
 $idle > 60 ==> tag inactive,
@@ -20,9 +24,7 @@ $idle > 60 ==> tag inactive,
 -- A rule that matches on a list of strings
 current window $program == ["Navigator","galeon"] ==> tag Web,
 
-current window $program == "sun-awt-X11-XFramePeer" &&
-current window $title == "I3P"
-  ==> tag Program:I3P,
+$isJava && current window $title == "I3P" ==> tag Program:I3P,
 
 current window $program == "sun-awt-X11-XDialogPeer" &&
 current window $title == " " &&
