--- a/tests/let.cfg
+++ b/tests/let.cfg
@@ -1,4 +1,5 @@
-let arbtt = current window $title =~ m/arbtt/,
+let arbtt = current window $title =~ m/arbtt/ in {
+    $arbtt && $time < 14:00 ==> tag arbtt-morning,
+    $arbtt && $time > 14:00 ==> tag arbtt-afternoon
+}
 
-$arbtt && $time < 14:00 ==> tag arbtt-morning,
-$arbtt && $time > 14:00 ==> tag arbtt-afternoon
