--- a/categorize.cfg
+++ b/categorize.cfg
@@ -20,8 +20,8 @@ $idle > 60 ==> tag inactive,
 -- A rule that matches on a list of strings
 current window $program == ["Navigator","galeon"] ==> tag Web,
 
--- Use let-bindings to reduce duplication
-let isJava = current window $program ==
+-- Use condition bindings to reduce duplication
+condition isJava = current window $program ==
   ["sun-awt-X11-XFramePeer", "sun-awt-X11-XDialogPeer", "sun-awt-X11-XWindowPeer"] in
   $isJava && current window $title == "I3P" ==> tag Program:I3P,
 
