--- a/tests/let.cfg
+++ b/tests/let.cfg
@@ -1,4 +1,4 @@
-let arbtt = current window $title =~ m/arbtt/ in {
+condition arbtt = current window $title =~ m/arbtt/ in {
     $arbtt && $time < 14:00 ==> tag arbtt-morning,
     $arbtt && $time > 14:00 ==> tag arbtt-afternoon
 }
