--- a/categorize.cfg
+++ b/categorize.cfg
@@ -22,8 +22,8 @@ current window $program == ["Navigator","galeon"] ==> tag Web,
 
 -- Use condition bindings to reduce duplication
 condition isJava = current window $program ==
-  ["sun-awt-X11-XFramePeer", "sun-awt-X11-XDialogPeer", "sun-awt-X11-XWindowPeer"] in
-  $isJava && current window $title == "I3P" ==> tag Program:I3P,
+  ["sun-awt-X11-XFramePeer", "sun-awt-X11-XDialogPeer", "sun-awt-X11-XWindowPeer"]
+in $isJava && current window $title == "I3P" ==> tag Program:I3P,
 
 current window $program == "sun-awt-X11-XDialogPeer" &&
 current window $title == " " &&
