--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,9 @@ script:
  - test -z "$STACK" || stack build --test
  # build the docs on only one of them
  - test -z "$DOCS" || make -C doc html
+ - test -z "$DOCS" || mkdir -p website/doc
+ - test -z "$DOCS" || mv doc/users_guide website/doc
+
 
 # The following scriptlet checks that the resulting source distribution can be built & installed
  - test -z "$CABALVER" -a -z "$WINDOWS" || {
@@ -69,5 +72,11 @@ script:
    fi;
    }
 
-after_success:
-  - 'test -z "$DOCS" || [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_SECURE_ENV_VARS" = "true" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ] && ./.travis-push-gh-pages.sh'
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  fqdn: arbtt.nomeata.de
+  local_dir: website
+  on:
+    branch: master
