--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@
 env:
  - CABALVER=1.18 GHCVER=7.8.4
  - CABALVER=1.22 GHCVER=7.10.2
+ - CABALVER=1.24 GHCVER=8.0.2
+ - CABALVER=1.24 GHCVER=8.2.2
  - CABALVER=head GHCVER=head  # see section about GHC HEAD snapshots
  - WINDOWS=yes
  - STACK=lts-2
