More dependency pruning, to get rid of network dependency

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -221,8 +221,9 @@ executable arbtt-import
     other-modules:
         Data.Conduit.Attoparsec
         Data.Conduit.Binary
+        Data.Streaming.FileRead
     build-depends:
-        text, resourcet, streaming-commons, unliftio-core
+        text, resourcet, unliftio-core
 
 executable arbtt-recover
     main-is:            recover-main.hs
