--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -61,6 +61,7 @@ executable arbtt-capture
         UpgradeLog1
         LeftFold
         LockFile
+        DumpFormat
 
     ghc-options: -rtsopts
 
@@ -207,6 +208,7 @@ executable arbtt-import
         CommonStartup
         TimeLog
         LockFile
+        DumpFormat
     ghc-options: -rtsopts
     if os(windows)
         cpp-options:    -DWIN32
