--- a/.travis.yml
+++ b/.travis.yml
@@ -49,10 +49,10 @@ before_install:
 install:
  - 'test -z "$STACK" || echo "resolver: $RESOLVER" > stack.yaml'
  - test -z "$STACK" || stack solver --update-config
- - test -z "$STACK" || stack build --only-dependencies "$ALLOW"
+ - test -z "$STACK" || stack build --only-dependencies $ALLOW
 
 script:
- - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal configure --enable-tests --enable-benchmarks -v2
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal configure --enable-tests --enable-benchmarks -v2 $ALLOW
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal build
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal test
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal check
