--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ before_install:
  - test -z "$STACK" || { travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack' ; }
  # stack needs cabal :-(
  - test -z "$STACK" || sudo add-apt-repository -y ppa:hvr/ghc
- - test -z "$STACK" || sudo apt-get update
- - test -z "$STACK" || sudo apt-get install cabal-install-1.24
+ - test -z "$STACK" || travis_retry sudo apt-get update
+ - test -z "$STACK" || travis_retry sudo apt-get install cabal-install-1.24
  - test -z "$STACK" || export PATH=/opt/cabal/1.24/bin:$PATH
 
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
@@ -42,7 +42,7 @@ before_install:
  - if [ "$GHCVER" = head ]; then export ALLOW="--allow-newer=base --allow-newer=template-haskell"; else export ALLOW=""; fi
  - test -z "$WINDOWS"  || bash ./.travis-setup-windows.sh
  - test -z "$CABALVER" || bash ./.travis-setup-linux.sh
- - test -z "$STACK" || sudo apt-get install g++ gcc libc6-dev libffi-dev libgmp-dev make xz-utils zlib1g-dev libwww-perl libx11-dev libxrandr-dev libxinerama-dev
+ - test -z "$STACK" || travis_retry sudo apt-get install g++ gcc libc6-dev libffi-dev libgmp-dev make xz-utils zlib1g-dev libwww-perl libx11-dev libxrandr-dev libxinerama-dev
  - 'test -z "$STACK" || RESOLVER="$(HEAD -S https://www.stackage.org/$STACK|grep HEAD|tail -n1|cut -d/ -f4)"'
  - test -z "$STACK" || stack setup --resolver $RESOLVER
 
@@ -77,7 +77,7 @@ jobs:
   include:
     - stage: deploy
       env: DOCS=yes
-      before_install: sudo apt-get install xsltproc docbook-xsl
+      before_install: sudo travis_retry apt-get install xsltproc docbook-xsl
       script:
        - make -C doc html
        - mkdir -p website/doc
