--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -107,7 +107,7 @@ executable arbtt-stats
         transformers, directory, filepath,
         aeson >= 0.10  && < 1.3,
         array == 0.4.* || == 0.5.*,
-        terminal-progress-bar < 0.2,
+        terminal-progress-bar >= 0.2 && < 0.3,
         bytestring-progress,
         mtl
 
