--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -187,7 +187,7 @@ executable arbtt-import
         containers == 0.5.*,
         binary >= 0.5,
         aeson >= 0.10  && < 1.3,
-        conduit == 1.2.*,
+        conduit >= 1.2 && < 1.4,
         exceptions == 0.8.*,
         attoparsec == 0.13.*,
         deepseq, bytestring, utf8-string, strict,
