Update travis test environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,13 @@
 language: generic
 
-# The following enables several GHC versions to be tested; often it's enough to test only against the last release in a major GHC version. Feel free to omit lines listings versions you don't need/want testing for.
 env:
  - CABALVER=1.18 GHCVER=7.8.4
  - CABALVER=1.22 GHCVER=7.10.2
  - CABALVER=1.24 GHCVER=8.0.2
  - CABALVER=2.0 GHCVER=8.2.2
+ - CABALVER=2.2 GHCVER=8.4.2
  - CABALVER=head GHCVER=head  # see section about GHC HEAD snapshots
- - STACK=lts-2
- - STACK=lts-3
- - STACK=lts-4
- - STACK=lts-5
- - STACK=lts-6
- - STACK=lts-7
- - STACK=lts-8
- - STACK=lts-9
- - STACK=lts-10
+# - STACK=lts-12
  - STACK=nightly
 
 matrix:
