--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -42,7 +42,7 @@ executable arbtt-capture
     build-depends:
                 base >= 4.7 && < 5,
                 filepath, directory, transformers, utf8-string, strict, containers,
-                aeson >= 0.10  && < 1.3,
+                aeson >= 0.10  && < 1.4,
                 binary >= 0.5,
                 bytestring, deepseq
 
@@ -105,7 +105,7 @@ executable arbtt-stats
         binary >= 0.5,
         deepseq, bytestring, utf8-string, strict,
         transformers, directory, filepath,
-        aeson >= 0.10  && < 1.3,
+        aeson >= 0.10  && < 1.4,
         array == 0.4.* || == 0.5.*,
         terminal-progress-bar >= 0.2 && < 0.3,
         bytestring-progress,
@@ -148,7 +148,7 @@ executable arbtt-dump
         base >= 4.7 && < 5,
         parsec == 3.*,
         containers == 0.5.*,
-        aeson >= 0.10  && < 1.3,
+        aeson >= 0.10  && < 1.4,
         array == 0.4.* || == 0.5.*,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, strict,
@@ -186,9 +186,9 @@ executable arbtt-import
         parsec == 3.*,
         containers == 0.5.*,
         binary >= 0.5,
-        aeson >= 0.10  && < 1.3,
+        aeson >= 0.10  && < 1.4,
         conduit >= 1.2 && < 1.4,
-        exceptions == 0.8.*,
+        exceptions >= 0.8,
         attoparsec == 0.13.*,
         deepseq, bytestring, utf8-string, strict,
         transformers, directory, filepath
@@ -281,7 +281,7 @@ test-suite test
     TimeLog
   Build-depends:
       base >= 4.7 && < 5
-      , tasty >= 0.7 && < 1.1
+      , tasty >= 0.7 && < 1.2
       , tasty-golden >= 2.2.0.2  && < 2.4
       , tasty-hunit >= 0.2  && < 0.11
       , process-extras >= 0.2 && < 0.8
