--- a/.travis.yml
+++ b/.travis.yml
@@ -45,14 +45,14 @@ script:
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal new-build
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal new-test
  - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal check
- - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal new-sdist
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal sdist
  - test -z "$STACK" || stack build --test
 
 
 # The following scriptlet checks that the resulting source distribution can be built & installed
  - test -z "$CABALVER" -a -z "$WINDOWS" || {
    export SRC_TGZ=$($W cabal info . | awk '{print $2 ".tar.gz";exit}') ;
-   cd dist-newstyle/sdist/;
+   cd dist/;
    if [ -f "$SRC_TGZ" ]; then
       $W cabal install --force-reinstalls "$SRC_TGZ";
    else
