--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -134,6 +134,7 @@ executable arbtt-stats
         Text.ParserCombinators.Parsec.ExprFail
         Text.Regex.PCRE.Light.Text
         TermSize
+        Paths_arbtt
     ghc-options: -rtsopts
     if os(windows)
         cpp-options:    -DWIN32
@@ -171,6 +172,7 @@ executable arbtt-dump
         TimeLog
         DumpFormat
         Data.List.TakeR
+        Paths_arbtt
     ghc-options: -rtsopts
     if os(windows)
         cpp-options:    -DWIN32
@@ -210,6 +212,7 @@ executable arbtt-import
         TimeLog
         LockFile
         DumpFormat
+        Paths_arbtt
     ghc-options: -rtsopts
     if os(windows)
         cpp-options:    -DWIN32
@@ -256,6 +259,7 @@ executable arbtt-recover
         Data.Binary.StringRef
         CommonStartup
         TimeLog
+        Paths_arbtt
     ghc-options: -rtsopts
     if os(windows)
         cpp-options:    -DWIN32
@@ -280,6 +284,7 @@ test-suite test
     Text.Parsec.ExprFail
     Text.Regex.PCRE.Light.Text
     TimeLog
+    Paths_arbtt
   Build-depends:
       base >= 4.7 && < 5
       , tasty >= 0.7 && < 1.3
@@ -305,6 +310,11 @@ test-suite test
   else
         build-depends: time >= 1.5
   default-language: Haskell98
+  build-tool-depends:
+      arbtt:arbtt-stats
+    , arbtt:arbtt-dump
+    , arbtt:arbtt-import
+    , arbtt:arbtt-recover
 
 source-repository head
   type:     git
