Add executable to `build-tools` of the test suite
as [advised by
@peti](https://github.com/NixOS/nixpkgs/commit/7c04e3eb7571ad8ce31a15a22beb11bfe921a387#commitcomment-32793630)

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -286,6 +286,10 @@ test-suite test
     Text.Regex.PCRE.Light.Text
     TimeLog
     Paths_arbtt
+  build-tools: arbtt-dump
+  build-tools: arbtt-import
+  build-tools: arbtt-recover
+  build-tools: arbtt-stats
   Build-depends:
       base >= 4.7 && < 5
       , tasty >= 0.7 && < 1.3
