--- a/.travis.yml
+++ b/.travis.yml
@@ -17,17 +17,23 @@ matrix:
 before_install:
  - mkdir -p ~/.local/bin
  - export PATH=~/.local/bin:$PATH
+
+ # Cabal
+ - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+ - test -z "$CABALVER" || bash ./.travis-setup-linux.sh
+
+
+ # Stack
  # install stack
  - test -z "$STACK" || { travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack' ; }
  # stack solver needs cabal :-(
- - test -z "$STACK" || sudo add-apt-repository -y ppa:hvr/ghc
- - test -z "$STACK" || travis_retry sudo apt-get update
- - test -z "$STACK" || travis_retry sudo apt-get install cabal-install-1.24
- - test -z "$STACK" || export PATH=/opt/cabal/1.24/bin:$PATH
+ - test -z "$STACK" || test "$STACK" = "yaml"  || sudo add-apt-repository -y ppa:hvr/ghc
+ - test -z "$STACK" || test "$STACK" = "yaml"  || travis_retry sudo apt-get update
+ - test -z "$STACK" || test "$STACK" = "yaml"  || travis_retry sudo apt-get install cabal-install-1.24
+ - test -z "$STACK" || test "$STACK" = "yaml"  || export PATH=/opt/cabal/1.24/bin:$PATH
 
- - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
- - test -z "$CABALVER" || bash ./.travis-setup-linux.sh
  - test -z "$STACK" || travis_retry sudo apt-get install g++ gcc libc6-dev libffi-dev libgmp-dev make xz-utils zlib1g-dev libwww-perl libx11-dev libxrandr-dev libxinerama-dev
+
  - 'test -z "$STACK" || test "$STACK" = "yaml"  || RESOLVER="$(HEAD -S https://www.stackage.org/$STACK|grep HEAD|tail -n1|cut -d/ -f4)"'
  - test -z "$STACK" || test "$STACK" = "yaml" || stack setup --resolver $RESOLVER
 
