Use regex syntax
This resolves issue 65

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -113,7 +113,7 @@ $date >= 2001-01-01 ==> tag this_century,
 -- “format $date” produces a string with the date in ISO 8601 format
 -- (YYYY-MM-DD), it may be compared with strings. For example, to match
 -- everything on and after a particular date I can use
-format $date =~ ".*-03-19"  ==> tag period:on_a_special_day,
+format $date =~ /.*-03-19/  ==> tag period:on_a_special_day,
 -- but note that this is a rather expensive operation and will slow down your
 -- data processing considerably.
 
