--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,7 +6,7 @@ jobs:
       matrix:
         ghc:
         - '8.6.5'
-        - '8.8.3'
+        - '8.8.4'
         - '8.10.2'
     runs-on: ubuntu-latest
     steps:
@@ -35,6 +35,7 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Build
       run: |
         make -C doc html
