--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,7 +8,10 @@ jobs:
         - '8.6.5'
         - '8.8.4'
         - '8.10.2'
-    runs-on: ubuntu-latest
+        os:
+        - ubuntu-latest
+        - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/cache@v1
       name: Cache ~/.cabal/store
