--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
 
     - if: runner.os == 'Linux'
       run: sudo apt-get install libxss-dev libx11-dev libxrandr-dev libxinerama-dev
+    - if: runner.os == 'Windows'
+      run: choco install gnuwin
+
     - name: Build
       run: |
         cabal update
