--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -49,6 +49,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.3
       with:
         BRANCH: gh-pages
-        FOLDER: webiste
+        FOLDER: website
         SINGLE-COMMIT: true
 
