Depend on new version of hashable
hashable-1.3.3.0 changes the hashing for `Text`, which affects the JSON
output, which broke our “golden test” strategy testing.

This make sure the new version of hashable is used, and updates the
expected test output.

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -112,7 +112,11 @@ executable arbtt-stats
         terminal-progress-bar >= 0.4 && < 0.5,
         bytestring-progress,
         mtl,
-        text
+        text,
+        -- hashable 1.3.3.0 changes the text hashing, which changes json output.
+        -- even though we do not directly depend on it, fix it here for the sake of
+        -- our test suite
+        hashable >= 1.3.3.0
 
     if !os(windows)
         build-depends: unix
@@ -156,7 +160,11 @@ executable arbtt-dump
         array == 0.4.* || == 0.5.*,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, strict,
-        transformers, directory, filepath
+        transformers, directory, filepath,
+        -- hashable 1.3.3.0 changes the text hashing, which changes json output.
+        -- even though we do not directly depend on it, fix it here for the sake of
+        -- our test suite
+        hashable >= 1.3.3.0
 
     if !os(windows)
         build-depends: unix
