--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,7 +7,8 @@ jobs:
         ghc:
         - '8.6.5'
         - '8.8.4'
-        - '8.10.2'
+        - '8.10.7'
+        - '9.0.1'
         os:
         - ubuntu-latest
         # TODO: - windows-latest
@@ -18,7 +19,7 @@ jobs:
       name: Cache ~/.cabal/store
       with:
         path: ~/.cabal/store
-        key: cabal-store-${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project', 'cabal.project.freeze') }}
+        key: cabal-store-${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('arbtt.cabal') }}
         restore-keys: cabal-store-${{ runner.os }}-${{ matrix.ghc }}-
 
     - uses: actions/checkout@v2
