--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -289,7 +289,7 @@ test-suite test
   Build-depends:
       base >= 4.7 && < 5
       , tasty >= 0.7 && < 1.5
-      , tasty-golden >= 2.2.0.2  && <= 2.3.4
+      , tasty-golden >= 2.2.0.2  && < 2.4
       , tasty-hunit >= 0.2  && < 0.11
       , process-extras >= 0.2 && < 0.8
       , deepseq
